código html inicial!

--- a/primeiro.html
+++ b/primeiro.html
@@ -9,7 +9,7 @@
        	 <div>
 	     <p>Bem Vindos!</p> 
 	     <p>TDSJ!</p>
-	     <p>SITUADA NA VILA OLIMPIA!!!</p>
+	     <p>VILA OLIMPIA!!!</p>
 	 <div>
       </body>
 </html>
